<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_language"
        android:title="@string/action_language"
        android:icon="@drawable/ic_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_dark_mode"
        android:title="@string/action_dark_mode"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_biometric_lock"
        android:title="@string/biometric_lock"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_backup"
        android:title="@string/action_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_restore"
        android:title="@string/action_restore_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        android:icon="@drawable/ic_delete_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info"
        app:showAsAction="never" />

</menu>